# vendas

./: .codexignore  .gitattributes  .gitignore  .railwayignore  AGENTS.md  Cliente.pyw  Gestao plataforma.pyw  HANDOFF.md  PROJECT_MAP.md  Pulso.pyw  README.md  Representante.pyw  iniciar.bat  pyproject.toml  railway.json  requirements.txt  roadmap.txt
docs/: 00_visao_produto.md  01_inventario_dados_exemplo.md  02_modelo_canonico_sql.md  03_ingestao_e_padronizacao.md  04_catalogo_analitico.md  05_roadmap_operacional.md  06_implantacao_novos_comercios.md  07_motor_reposicao.md  08_referencia_practica_navegacao.md  09_fluxo_cotacoes.md  10_maturidade_nexo.md  11_trilhas_operacionais.md  12_inteligencia_comercial.md  13_central_acoes.md  14_decisao_mix_no_pedido.md  15_skills_internas_nexo.md  16_motor_do_nexo.md  17_ciclo_cotacao.md  18_pedido_compra_canonico.md  19_precificacao_periodo.md  20_estado_atual.md  21_metodo_de_trabalho.md  22_roadmap_produto_final.md  23_contratos_api.md  24_fluxo_parceiros_distribuicao.md  25_mesa_de_gestao.md  26_deploy_portal_vendedor.md  99_guia_de_contexto.md  README.md
mappings/: practica_csv.yml
nexo_skills/: action_center.json  commercial_intelligence.json  data_governance.json  implementation_journey.json  manifest.json  operational_memory.json  pricing_guardrails.json  quotation_flow.json  replenishment_mix.json  supplier_workbench.json
schema/: canonical.sql
scripts/: action_center.py  api_contracts.py  api_routes.py  app_config.py  auth.py  commercial.py  company_profile.py  compare_replenishment_v2.py  customer_catalog.py  (+32 more)
(+67 files in other folders)
