[project]
name = "nexovarejo"
version = "0.1.0"
description = "Camada inteligente de estoque, compras e clientes para varejos conectada a ERPs existentes."
requires-python = ">=3.11"
dependencies = []

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
